# MIPT-networked

./: .gitmodules  CMakeLists.txt  netshape.sh  reset_netshape.sh
w1/: client  client.cpp  server  server.cpp  socket_tools.cpp
w2/: CMakeLists.txt  client.cpp  game_server.cpp  lobby.cpp
w4/: CMakeLists.txt  MAkefile  bitstream.cpp  bitstream.h  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp
w5/: entity.cpp  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp
